--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Acebook</title>
     <%= csrf_meta_tags %>
-
+		<link href="/app/assets/stylesheets/application.css" rel="stylesheet" type="text/css">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
