--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
+
+<% if !user_signed_in?%>
+  <% controller.redirect_to "/" %>
+<% end %>
+	
 <% @posts.each do |post| %>
   <p><%= post.message %></p>
 <% end %>
@@ -5,3 +10,4 @@
 <%= link_to new_post_path do %>
   New post
 <% end %>
+		
