--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,5 @@
-
-  <h1>New Post</h1>
+<h1>New Post</h1>
   
-  <%= form_for @post do |form| %> 
-  <%= form.label :message %>  
-  <%= form.text_field :message %>  
-
-<%= form.submit "Submit" %>  
-
-<% end  %> 
-
-  <%# <%= render "form", post: @post %>  
+<%= render 'form', post: @post %> 
 
 
