--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,9 @@
 <h1><%= @post.message %></h1>
+<br>
+<%= link_to "Home page", posts_path %>
+<br>
+<br>
 
-<br>
-<%= link_to  posts_path do %>
-    Home page
-<% end %>
-    
-<br>
-<br>
-<%= link_to edit_post_path(@post) do %>
-    Edit post
-<% end %>
 
+
+ 
