--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,17 +1,5 @@
-<%= form_with model: @post do |form| %>
-<div>
-    <%= form.label :message %><br>
-    <%= form.text_field :message %>
-    <% @post.errors.full_messages_for(:message).each do |post| %>
-    <div><%= post %></div>
-    <% end %>
-    <%= link_to posts_path(@post) do %>
- <% end %>
-
-    <%= form.submit "Submit" %>
-   
-
-</div>
-
+<%= form_for @post do |form| %>
+  <%= form.label :message %>
+  <%= form.text_field :message %>
+  <%= form.submit 'Submit' %>
 <% end %>
-
