--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;1,200;1,400&display=swap');
+ *{
+	 margin:0;
+	 padding:0;
+	 font-family: 'Montserrat', sans-serif;
+ }
+ body{
+	 height:100vh;
+ }
+ .container{
+	 display:grid;
+	 grid-template-columns: 2fr 1fr;
+ }
+ .titleAndTag{
+	 grid-column: 1/2;
+ }
+ #iobook_logo{
+	 background-image: url('../images/IOBOOK_logo.png');
+ }
+ .loginContainer{
+	 grid-column: 2/3;
+ }
