--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
+<% if !user_signed_in?%>
+  <% controller.redirect_to "/" %>
+<% end %>
+
 <h1><%= @post.message %></h1>
 <br>
 <%= link_to "Home page", posts_path %>
