--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,12 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
 
-<section class="container">
-	<section class="titleAndTag">
-		<div id="iobook_logo"></div> 
-		<h4>IOBook helps you connect and share with the programmers in your life</h4>
-	</section>
-	<section class="loginContainer">
+<% controller.redirect_to "/users/sign_in" %>
 
-	</section>
-</section>
-    
+
+
+<%# if user_signed_in?%>
+<%#= link_to 'Sign out', destroy_user_session_path, method: :delete%>
+<%# else %>
+<%#= link_to 'Sign up', new_user_registration_path%>
+<%#= link_to 'Sign in', new_user_session_path%>
+<%#end%>
 			
-			<% if user_signed_in?%>
-			<%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
-			<% else %>
-			<%= link_to 'Sign up', new_user_registration_path%>
-			<%= link_to 'Sign in', new_user_session_path%>
-			<%end%>
