--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,19 @@
 
-<% controller.redirect_to "/users/sign_in" %>
-
-
-
-<%# if user_signed_in?%>
-<%#= link_to 'Sign out', destroy_user_session_path, method: :delete%>
-<%# else %>
-<%#= link_to 'Sign up', new_user_registration_path%>
-<%#= link_to 'Sign in', new_user_session_path%>
-<%#end%>
+    
 			
+<% if user_signed_in? %>
+	<% controller.redirect_to "/posts/" %>
+<% else %>
+<section class="container">
+	<section class="title_and_tag">
+		<%= image_tag 'IOBOOK_logo.png', style: 'height:72px;width:304px;margin-left: auto;margin-right: auto;' %>
+		<h4 id="tag_line">IOBook helps you connect and share with the programmers in your life</h4>
+	</section>
+	<section>
+		<%= render "/devise/sessions/new" %>
+	</section>
+	<section id="sign_up">
+		<%= render "devise/registrations/new" %>
+	</section>
+</section>
+<%end%>
