--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,9 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application' , media: 'all' %>
     <%= javascript_include_tag 'application' %>
+		<script src="https://kit.fontawesome.com/65db07c83e.js" crossorigin="anonymous"></script>
   </head>
   <body>
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
 		<%= yield %>
   </body>
 </html>
