--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,11 @@
 
 <% if !user_signed_in?%>
   <% controller.redirect_to "/" %>
-<% end %>
 	
+<% end %>
+
+<%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
+
 <% @posts.each do |post| %>
   <p><%= post.message %></p>
 <% end %>
