--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <% @posts.each do |post| %>
-  <p><%= post.message   %></p>
+  <p><%= simple_format(post.message)   %></p>
   <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
   <%= link_to 'Edit post', edit_post_path(post.id) %><br>
   <%= link_to 'Delete post', post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
