--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,16 +2,22 @@
   <% controller.redirect_to "/" %>
 <% end %>
 
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
-
+<section id="page_container">
+  <%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
 <%= link_to new_post_path do %>
   New post
 <% end %>
 
 <% @posts.each do |post| %>
-  <p><%= post.message   %></p>
-  <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
-  <%= link_to 'Edit post', edit_post_path(post.id) %><br>
-  <%= link_to 'Delete post', post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
+  <section id="post_container">
+    <p><%= post.message   %></p>
+    <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
+    <%= link_to 'Edit post', edit_post_path(post.id) %><br>
+    <%= link_to 'Delete post', post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
+  </section>
+  
 <% end %>
+</section>
+
+
 		
