--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,21 +13,21 @@
  *= require_tree .
  *= require_self
  */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;1,200;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,500;1,200;1,400&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   --dark-green: #588157;
   --light-green: #84a98c;
-	--other-green: #E1EAE3;
-	--gray: #808080;
+  --other-green: #e1eae3;
+  --gray: #808080;
 }
 body {
   height: 100vh;
 }
 .container {
-	height: 100vh;
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
@@ -51,16 +51,16 @@ body {
   width: 1px;
 }
 .input_card {
-	margin:auto;
-	box-sizing: border-box;
-	display: grid;
-	grid-row-gap: 10px;
-	justify-items: center;
-	align-items: center;	
-	padding: 10px;
+  margin: auto;
+  box-sizing: border-box;
+  display: grid;
+  grid-row-gap: 10px;
+  justify-items: center;
+  align-items: center;
+  padding: 10px;
 }
-.login_card{
-	border: 3px solid #588157;
+.login_card {
+  border: 3px solid #588157;
 }
 .text_input {
   border: 1px solid var(--dark-green);
@@ -68,80 +68,88 @@ body {
   height: 30px;
   margin: 5px;
   padding: 2px;
-	border-radius: 2px;
-	transition: box-shadow 200ms;
+  border-radius: 2px;
+  transition: box-shadow 200ms;
 }
-.text_input:hover{
-	cursor: pointer;
-	box-shadow: 2px 2px 4px var(--dark-green);
+.text_input:hover {
+  cursor: pointer;
+  box-shadow: 2px 2px 4px var(--dark-green);
 }
-.btn{
-	border: 1px solid #000000;
-	box-sizing: border-box;
-	border-radius: 5px;
-	width: 100px;
-	height: 30px;
-	transition: box-shadow 200ms;
+.btn {
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 100px;
+  height: 30px;
+  transition: box-shadow 200ms;
 }
-.btn:hover{
-	cursor: pointer;
-	box-shadow: 2px 2px 4px var(--dark-green);
+.btn:hover {
+  cursor: pointer;
+  box-shadow: 2px 2px 4px var(--dark-green);
 }
-.dark_btn{
-	background: var(--dark-green);
+.dark_btn {
+  background: var(--dark-green);
 }
-.login_divider{
-	width: 170px;
-	color: #000000;
+.divider {
+  width: 170px;
+  color: #000000;
 }
-.light_btn{
-	background: var(--light-green);
-	margin: 10px;
+.light_btn {
+  background: var(--light-green);
+  margin: 10px;
 }
-#sign_up{
-	position: absolute;
-	display: none;
-	margin: auto;
-	background-color: white;
-	border:2px solid var(--dark-green);
-	box-shadow: 20px 20px 20px rgba(88, 129, 87, 0.5);
-	padding: 30px;
-	border-radius: 20px;	
+#sign_up {
+  position: absolute;
+  display: none;
+  margin: auto;
+  background-color: white;
+  border: 2px solid var(--dark-green);
+  box-shadow: 20px 20px 20px rgba(88, 129, 87, 0.5);
+  padding: 30px;
+  border-radius: 20px;
 }
-.inline{
-	display: inline-block;
+.inline {
+  display: inline-block;
 }
-.close_btn{
-	margin-left: 30%;
-	width:50px;
+.close_btn {
+  margin-left: 30%;
+  width: 50px;
 }
-#page_container{
-	height:100vh;
-	display: grid;
-	grid-template-columns: repeat(4,1fr);
+#page_container {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
 }
-#post_container{
-	border: 2px solid var(--gray);
-	background-color: var(--other-green);
-	border-radius:5px;
-	margin-top: 20px;
+#post_container {
+  border: 2px solid var(--gray);
+  background-color: var(--other-green);
+  border-radius: 5px;
+  margin-top: 20px;
+  grid-column: 2/3;
+  display: grid;
+  grid-template: 1fr 4fr / 1fr 4fr;
 }
-
+.blank_btn {
+  border: none;
+  background-color: transparent;
+}
+#post_options {
+  display: none;
+}
 
 @media only screen and (max-width: 750px) {
-  .container{
-		display:flex;
-		flex-direction: column;
-		margin-top: 75px;
-		justify-items: center;
-	}
-	.title_and_tag{
-		display: flex;
-		flex-direction: column;
-		padding: 50px;
-		width: 340px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-	
+  .container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 75px;
+    justify-items: center;
+  }
+  .title_and_tag {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    width: 340px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
