--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,23 +1,31 @@
 <% if !user_signed_in?%>
   <% controller.redirect_to "/" %>
-<% end %>
+    <% end %>
 
-<section id="page_container">
-  <%= link_to 'Sign out', destroy_user_session_path, method: :delete%>
-<%= link_to new_post_path do %>
-  New post
-<% end %>
+      <section id="page_container">
+        <%= link_to 'Sign out' , destroy_user_session_path, method: :delete%>
+          <%= link_to new_post_path do %>
+            New post
+            <% end %>
 
-<% @posts.each do |post| %>
-  <section id="post_container">
-    <p><%= post.message   %></p>
-    <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
-    <%= link_to 'Edit post', edit_post_path(post.id) %><br>
-    <%= link_to 'Delete post', post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
-  </section>
-  
-<% end %>
-</section>
-
-
-		
+              <% @posts.each do |post| %>
+                <section id="post_container">
+                  <p>
+                    <%= post.message %>
+                  </p>
+                  <button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
+                  <p>
+                    <%= post.created_at.localtime.strftime("%d/%m/%y") %>
+                  </p>
+                  <p>
+                    <%= post.created_at.localtime.strftime("%H:%M") %>
+                  </p>
+                  <aside id="post_options">
+                  <%= link_to 'Edit post' , edit_post_path(post.id) %><br>
+                  <hr class="divider">
+                  <%= link_to 'Delete post' , post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?"} %>
+                  </aside>
+                </section>
+                
+                <% end %>
+      </section>
