--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     
 			
 <% if user_signed_in? %>
-	<% controller.redirect_to "/posts/" %>
+	<% controller.redirect_to "/feed/" %>
 <% else %>
 <section class="container">
 	<section class="title_and_tag">
