--- a/app/views/feed/newsfeed.html.erb
+++ b/app/views/feed/newsfeed.html.erb
@@ -9,6 +9,6 @@
 <% end %>
 
 <% @posts.each do |post| %>
-  <p><%= simple_format(post.message)   %></p>
+  <p><%= simple_format(post.message)   %></p> <br>
   <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
 <% end %>
