--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <% else %>
 <section class="container">
 	<section class="title_and_tag">
-		<%= image_tag 'IOBOOK_logo.png', style: 'height:72px;width:304px;margin-left: auto;margin-right: auto;' %>
+		<%= image_tag 'IOBook_underlined.png', class: %w(home_image) %>
 		<h4 id="tag_line">IOBook helps you connect and share with the programmers in your life</h4>
 	</section>
 	<section>
