--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,10 +30,16 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
+  
+  <div class="field">
+    <%= f.label "Profile Photo"%>
+    <%= f.file_field :avatar %>
+  </div>
 
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
+  
 <% end %>
 
 <h3>Cancel my account</h3>
@@ -41,3 +47,4 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+
