--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,6 +10,7 @@
 
 <% @posts.each do |post| %>
   <% next if post.user_id != current_user.id %>
+  <p><%= post.name %></p>
   <p><%= simple_format(post.message)   %></p>
   <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
   <%= link_to 'Edit post', edit_post_path(post.id) %><br>
