--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,26 +4,24 @@
 
       <%= render "layouts/navbar" %>
 
+
         <section id="page_container">
-          <%= link_to 'Edit profile' , edit_user_registration_path %>
-            <%= link_to 'Sign out' , destroy_user_session_path, method: :delete%>
               <%= link_to new_post_path do %>
                 New post
                 <% end %>
 
 								<section id="new_post_container">
 									<section id="new_post">
-										<%= form_with url: new_post_path, class: %w(new_post_form) do |form| %>
+										<%= form_with(url: posts_path, class: %w(new_post_form)) do |form| %>
 
 											<%= form.text_area :message, placeholder: "What's on your mind?" %>
 											
-											<%= button_tag type: 'submit', class: "btn dark_btn" do %>
-												<i class="fas fa-pencil-alt"></i> Post
-											<% end %>
-			
+											<%= form.submit 'Submit', class: "btn dark_btn"%>
+
 										<% end %>
 									</section>
 								</section>
+                
 								
 								
 								
