--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,16 +29,18 @@
 								
                   <% @posts.each do |post| %>
           <% next if post.user_id != current_user.id %>
-  <p><%= post.name %></p>
                     <section id="post_container">
                       <div></div>
                       <button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
                       <div>
                         <p>
-                          <%= post.created_at.localtime.strftime("%d/%m/%y") %>
+                        <%= post.name %>
                         </p>
                         <p>
                           <%= post.created_at.localtime.strftime("%H:%M") %>
+                        </p>
+                        <p>
+                          <%= post.created_at.localtime.strftime("%d/%m/%y") %>
                         </p>
                       </div>
                       <p>
