--- a/app/views/feed/newsfeed.html.erb
+++ b/app/views/feed/newsfeed.html.erb
@@ -1,4 +1,4 @@
-<% if !user_signed_in? %>
+<!-- <% if !user_signed_in? %>
   <% controller.redirect_to "/" %>
 <% end %>
 
@@ -13,4 +13,62 @@
   <p><%= post.name %></p>
   <p><%= simple_format(post.message)   %></p> <br>
   <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
-<% end %>
+<% end %> -->
+
+	<% if !user_signed_in?%>
+		<% controller.redirect_to "/" %>
+	<% end %>	
+
+	<%= render "layouts/navbar" %>
+
+  <section id="page_container">
+	<%= link_to new_post_path do %>
+		New post
+	<% end %>
+
+	<section id="new_post_container">
+		<section id="new_post">
+			<%= form_with(url: posts_path, class: %w(new_post_form)) do |form| %>
+
+				<%= form.text_area :message, placeholder: "What's on your mind?" %>
+				
+				<%= form.submit 'Submit', class: "btn dark_btn"%>
+
+			<% end %>
+		</section>
+	</section>
+  	
+	<% @posts.each do |post| %>
+		<section id="post_container">
+			<div>
+				<p><%= post.name %></p>
+				
+				<% if current_user.avatar.attached? %>
+					<%= image_tag url_for(current_user.avatar), class: %w(post_image_size)%>
+				<% end %>
+			</div>
+			<button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
+			<div>
+				<p>
+				<%= post.name %>
+				</p>
+				<p>
+					<%= post.created_at.localtime.strftime("%H:%M") %>
+				</p>
+				<p>
+					<%= post.created_at.localtime.strftime("%d/%m/%y") %>
+				</p>
+			</div>
+			<p>
+					<p><%= simple_format(post.message)   %></p>
+			</p>
+			<aside id="post_options">
+				<%= link_to 'Edit post' , edit_post_path(post.id) %><br>
+					<hr class="divider">
+					<%= link_to 'Delete post' , post_path(post.id), method: :delete, data: {
+						confirm: "Are you sure you want to delete?" } %>
+			</aside>
+		</section>
+	<% end %>
+</section>
+
