--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,6 +160,18 @@
 	 display: grid;
 	 grid-template-columns: 1fr 2fr 1fr;
  }
+#user_info_box {
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 15px;
+  border: 1px solid var(--gray);
+  border-radius: 5px;
+  grid-template-columns: 1/3;
+	height: 250px;
+  padding: 10px;
+  background-color: var(--other-green);
+}
+
  #post_container {
 	 border: 1px solid var(--gray);
 	 background-color: var(--other-green);
@@ -169,6 +181,12 @@
 	 display: grid;
 	 grid-template: 1fr 4fr / 1fr 4fr;
 	 height: 150px;
+ }
+ #message {
+  grid-template: 2fr 3fr;
+ }
+ #profile-info {
+   font-size: small;
  }
  .blank_btn {
 	border: none;
