--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,13 +6,27 @@
 
 <section id="page_container">
 
+<section id="user_info_box">
+
+<h3><strong><%= current_user.name %></strong></h3><br>
+<div id="profile-info">
+  <p>Country: <strong><%= current_user.country %></strong></p><br>
+  <p>Language: <strong><%= current_user.languages %></strong></p><br>
+  <p>IDE: <strong><%= current_user.ide %></strong></p><br>
+  <p><i class="fab fa-github"></i> <strong><%= current_user.github %></strong></p>
+  <p><i class="fab fa-twitter"></i> <strong><%= current_user.twitter %></strong></p>
+  <p><i class="fab fa-linkedin-in"></i> <strong><%= current_user.linkedin %></strong></p>
+</div>
+</section>
+
+
   <section id="new_post_container">
 		<section id="new_post">
 			<%= form_for @post do |form| %>
       <%= form.text_area :message %>
   
       <div id="new_post_button" class="btn:hover"><i class="fas fa-pencil-alt"></i>
-      <%= form.submit 'Post' %></div>
+      <%= form.submit 'Post', placeholder: "What's on your mind?"%></div>
   
       <% end %>
 		</section>
@@ -23,17 +37,23 @@
     <% next if post.user_id != current_user.id %>
     <section id="post_container">
     <div>
+    <br>
 	  <p><%= post.name %></p>
-	  <% if current_user.avatar.attached? %>
-    <%= image_tag url_for(current_user.avatar), class: %w(post_image_size)%>
-    <% end %>
-  </div>
-  <button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
-  <div>
-   <p><%= post.created_at.localtime.strftime("%H:%M") %></p>
-  <p><%= post.created_at.localtime.strftime("%d/%m/%y") %></p>
-  </div>
-  <p><%= simple_format(post.message) %></p>
+	    <% if current_user.avatar.attached? %>
+        <%= image_tag url_for(current_user.avatar), class: %w(post_image_size)%>
+      <% end %>
+    </div>
+
+
+    <button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
+    <div>
+      <p><%= post.created_at.localtime.strftime("%H:%M") %></p>
+      <p><%= post.created_at.localtime.strftime("%d/%m/%y") %></p>
+    </div>
+
+    <div id="message">
+    <p><%= simple_format(post.message) %></p>
+    </div>
   <%# <aside id="post_options"> %>
   <%= link_to 'Edit post' , edit_post_path(post.id) %><br>
   <%# <hr class="divider"> %>
