--- a/app/views/feed/newsfeed.html.erb
+++ b/app/views/feed/newsfeed.html.erb
@@ -1,29 +1,6 @@
-<!-- <% if !user_signed_in? %>
-  <% controller.redirect_to "/" %>
-<% end %>
-
-<%= render "layouts/navbar" %>
-
-
-<%= link_to new_post_path do %>
-  New post
-<% end %>
-
-                    <section id="new_post_container">
-									<section id="new_post">
-										<%= form_for @post do |form| %>
-                      <%= form.text_area :message %>
-                      <%= form.submit 'Submit' %>
-                    <% end %>
-									</section>
-								</section>
-<% @posts.each do |post| %>
-  <p><%= post.name %></p>
-  <p><%= simple_format(post.message)   %></p> <br>
-  <p><%= post.created_at.localtime.strftime("%H:%M %d/%m/%y") %></p>
-<% end %> -->
-
-	<% if !user_signed_in?%>
+	<% require 'pg' %>
+  
+  <% if !user_signed_in?%>
 		<% controller.redirect_to "/" %>
 	<% end %>	
 
@@ -44,18 +21,22 @@
 	</section>
   	
 	<% @posts.each do |post| %>
+
+  <% user_id = post.user_id %>
+
 		<section id="post_container">
 			<div>
 				<p><%= post.name %></p>
 				
-				<% if current_user.avatar.attached? %>
-					<%= image_tag url_for(current_user.avatar), class: %w(post_image_size)%>
+				<% if User.find(user_id).avatar.attached? %>
+					<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
+        <% else %>
+          <%= image_tag "unknown.png", class: %w(post_image_size) %>
 				<% end %>
 			</div>
 			<button onclick="togglePostOptions()" class="blank_btn"><i class="fas fa-ellipsis-h"></i></button>
 			<div>
 				<p>
-				<%= post.name %>
 				</p>
 				<p>
 					<%= post.created_at.localtime.strftime("%H:%M") %>
