--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -166,7 +166,7 @@
   margin-right: 15px;
   border: 1px solid var(--gray);
   border-radius: 5px;
-  grid-template-columns: 1/3;
+  grid-column: 1/2;
 	height: 250px;
   padding: 10px;
   background-color: var(--other-green);
@@ -215,6 +215,7 @@
  }
  #new_post_button {
   background: var(--dark-green);
+  
  }
   textarea{
 	width: 100%;
