--- a/app/views/feed/newsfeed.html.erb
+++ b/app/views/feed/newsfeed.html.erb
@@ -23,7 +23,7 @@
 		<section id="post_container">
 			<div>
 				<p><%= post.name %></p>
-				
+				<p><%= post.likes.count %> <%= (@post.likes.count) == 1 ? 'Like' : 'Likes'%></p>
 				<% if User.find(user_id).avatar.attached? %>
 					<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
         <% else %>
@@ -41,6 +41,7 @@
 			<aside id="post_options">
 				<%= link_to 'Edit post' , edit_post_path(post.id) %><br>
 					<hr class="divider">
+          <%= button_to 'Like', post_likes_path(post), method: :post %>
 					<%= link_to 'Delete post' , post_path(post.id), method: :delete, data: {
 						confirm: "Are you sure you want to delete?" } %>
 			</aside>
