--- a/app/views/feed/newsfeed.html.erb
+++ b/app/views/feed/newsfeed.html.erb
@@ -13,6 +13,7 @@
 		<section id="new_post_container">
 			<%= form_for @post, :html => {:id => 'new_post', :class => 'class'} do |form| %>
 				<%= form.text_area :message, placeholder: "What's on your mind?"  %>
+				<%= form.file_field :avatar %>
 				<div id="new_post_button">
 					<i class="fas fa-pencil-alt"></i>
 					<%= form.submit 'Post', class: %w(blank_btn)%>
@@ -27,13 +28,8 @@
 					<div>
 						<br>
 						<p>
-							<%= post.name %>
+							<strong><%= post.name %></strong>						
 						</p>
-						<% if User.find(user_id).avatar.attached? %>
-							<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
-						<% else %>
-							<%= image_tag "unknown.png", class: %w(post_image_size) %>
-						<% end %>
 					</div>
 
 					<div>
@@ -42,14 +38,22 @@
 					</div>
 
 					<div>
+					<% if User.find(user_id).avatar.attached? %>
+							<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
+						<% else %>
+							<%= image_tag "unknown.png", class: %w(post_image_size) %>
+						<% end %>
 						<%= button_to 'Like', post_likes_path(post), class: %w{btn dark_btn}, method: :post %>
 					</div>
 					
 					<div id="message">
 						<p>
-							<strong>
-								<%= simple_format(post.message) %>
-							</strong>
+						<strong>
+							<%= simple_format(post.message) %>
+						</strong>
+						<% if post.avatar.attached?%>
+							<%= image_tag url_for(post.avatar), class: %w(post_attachment_size)%>
+						<% end %>
 						</p>
 					</div>
 					
