--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,6 +30,7 @@
 		<section id="new_post_container">
 			<%= form_for @post, :html => {:id => 'new_post', :class => 'class'} do |form| %>
 				<%= form.text_area :message, placeholder: "What's on your mind?"  %>
+				<%= form.file_field :avatar %>
 				<div id="new_post_button">
 					<i class="fas fa-pencil-alt"></i>
 					<%= form.submit 'Post', class: %w(blank_btn)%>
@@ -44,13 +45,8 @@
 				<div>
 					<br>
 					<p>
-						<%= post.name %>
+						<strong><%= post.name %></strong>
 					</p>
-					<% if User.find(user_id).avatar.attached? %>
-						<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
-					<% else %>
-						<%= image_tag "unknown.png", class: %w(post_image_size) %>
-					<% end %>
 				</div>
 
 				<div>
@@ -58,6 +54,12 @@
 				</div>
 
 				<div>
+					<% if User.find(user_id).avatar.attached? %>
+						<%= image_tag url_for(User.find(user_id).avatar ), class: %w(post_image_size)%>
+					<% else %>
+						<%= image_tag "unknown.png", class: %w(post_image_size) %>
+					<% end %>
+				<br>
 					<%= link_to 'Edit post', edit_post_path(post.id) %><br>
 					<%= link_to 'Delete post', post_path(post.id), method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
 				</div>
@@ -67,6 +69,9 @@
 						<strong>
 							<%= simple_format(post.message) %>
 						</strong>
+						<% if post.avatar.attached?%>
+              <%= image_tag url_for(post.avatar), class: %w(post_attachment_size)%>
+            <% end %>
 					</p>
 				</div>
 				
